# logger

./: CMakeLists.txt
sources/: buffer.cpp  buffer.hpp  common.hpp  logger.hpp  main.cpp
sources/buffers/: CMakeLists.txt  ring_buffer.hpp  stack_allocator.hpp
sources/sinks/: CMakeLists.txt  file_sink.cpp  file_sink.h  stdout_sink.cpp  stdout_sink.h
